--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ComposeLayout</string>
+    <string name="prodi">Teknologi Informasi</string>
+    <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
+    <string name="nama">Yudha Putra Ramadhan</string>
+    <string name="alamat">Kasihan, Bantul</string>
+    <string name="copy">copyright, 2025</string>
 </resources>
