--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="alamat">Kasihan, Bantul</string>
     <string name="copy">copyright, 2025</string>
     <string name="nama1">Nanaka Yudha</string>
-    <string name="nama2">Yaduh</string>
+    <string name="nama2">Nanaka Yaduh</string>
     <string name="notelepon1">082165430987</string>
     <string name="notelepon2">088967453213</string>
 </resources>
